--- a/graphs-visualizer/src/index.html
+++ b/graphs-visualizer/src/index.html
@@ -7,7 +7,15 @@
         <title>Visualizer</title>
     </head>
     <body>
-        <h1>hello world</h1>
-        <script src="scripts/main.ts" ></script>
+        <div class="bg-black w-screen h-screen flex items-center justify-center text-white">
+
+            <div id="app" class="rou"></div>
+            <form id="bfsForm">
+                <input type="number" name="target" id="targetInput" placeholder="2">
+                <input type="number" name="source" id="sourceInput" placeholder="3">
+                <button type="submit">Run Bfs</button>
+            </form>
+        </div>
+        <script src="app.ts" type="module" ></script>
     </body>
 </html>
