--- a/graphs-visualizer/src/index.html
+++ b/graphs-visualizer/src/index.html
@@ -3,19 +3,65 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/main.css" />
+        <link rel="stylesheet" href="styles/grid.css">
         <title>Visualizer</title>
     </head>
     <body>
-        <div class="bg-black w-screen h-screen flex items-center justify-center text-white">
-
+        <div
+            class="
+                bg-black
+                w-screen
+                h-screen
+                flex
+                items-center
+                justify-center
+                text-white
+            "
+        >
             <div id="app" class="rou"></div>
-            <form id="bfsForm">
-                <input type="number" name="target" id="targetInput" placeholder="2">
-                <input type="number" name="source" id="sourceInput" placeholder="3">
-                <button type="submit">Run Bfs</button>
+            <form
+                id="bfsForm"
+                class="
+                    bg-gray-900
+                    rounded-md
+                    shadow-sm
+                    p-2
+                    grid grid-cols-1
+                    gap-4
+                    text-gray-700
+                    w-lg
+                    ml-4
+
+                "
+                style="width: 750px"
+            >
+                <label for="target" class="text-white">Source</label>
+                <input
+                    type="number"
+                    name="source"
+                    id="sourceInput"
+                    placeholder="3"
+                    class="p-2 rounded-md"
+                />
+                <label for="target" class="text-white font-semibold"
+                    >Target</label
+                >
+                <input
+                    type="number"
+                    name="target"
+                    id="targetInput"
+                    placeholder="2"
+                    class="p-2 rounded-md"
+                />
+                <button
+                    type="submit"
+                    class="bg-blue-400 rounded-md text-white p-4"
+                >
+                    Run Bfs
+                </button>
             </form>
         </div>
-        <script src="app.ts" type="module" ></script>
+        <script src="app.ts" type="module"></script>
     </body>
 </html>
