commit maze gen implemented

--- a/graphs-visualizer/src/index.html
+++ b/graphs-visualizer/src/index.html
@@ -61,6 +61,12 @@
                     Run Bfs
                 </button>
             </form>
+            <button
+            id="maze-gen-button"
+            class="bg-blue-400 rounded-md text-white p-4"
+            >
+            run maze generator
+        </button>
         </div>
         <script src="app.ts" type="module"></script>
     </body>
