commit Djikstra and randomCostEdge gen implemented ¿¿properly??

--- a/graphs-visualizer/src/index.html
+++ b/graphs-visualizer/src/index.html
@@ -57,8 +57,16 @@
                 <button
                     type="submit"
                     class="bg-blue-400 rounded-md text-white p-4"
+                    id="bfs-button"
                 >
                     Run Bfs
+                </button>
+                <button
+                    type = "submit"
+                    class = "bg-blue-400 rounded-md text-white p-4"
+                    id = "djiksta-button"
+                >
+                    Run Djikstra's
                 </button>
             </form>
             <button
