--- a/graphs-visualizer/src/index.html
+++ b/graphs-visualizer/src/index.html
@@ -73,8 +73,14 @@
             id="maze-gen-button"
             class="bg-blue-400 rounded-md text-white p-4"
             >
-            run maze generator
-        </button>
+            Run maze generator
+            </button>
+            <button
+            id="random-costs-button"
+            class="bg-blue-400 rounded-md text-white p-4"
+            >
+            Set Random Costs
+            </button>
         </div>
         <script src="app.ts" type="module"></script>
     </body>
