--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/dist/index.5525e4b8.css">
-        <link rel="stylesheet" href="/dist/index.5409f38f.css">
+        <link rel="stylesheet" href="dist/index.5525e4b8.css">
+        <link rel="stylesheet" href="dist/index.5409f38f.css">
         <title>Visualizer</title>
     </head>
     <body>
@@ -48,6 +48,6 @@
             Set Random Costs
             </button>
         </div>
-        <script src="/dist/index.6b815632.js" defer=""></script>
+        <script src="dist/index.6b815632.js" defer=""></script>
     </body>
 </html>
